# kobo-book-downloader

./: .gitignore  .goreleaser.yaml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: build.yml  pyinstaller.yml  release.yml
cmd/: book.go  root.go  serve.go  user.go
internal/actions/: download.go  format.go  list.go
internal/config/: config.go
internal/drm/: drm.go  drm_test.go
internal/kobo/: auth.go  client.go  download.go  errors.go  library.go  transport.go  types.go  util.go
internal/web/: handlers.go  server.go
internal/web/templates/: books.html  error.html  layout.html  users.html
kobodl/: actions.py  app.py  globals.py  kobo.py  settings.py  waitfor.py
kobodl/commands/: book.py  user.py
kobodl/templates/: activation_form.html  users.j2
pip-wheel-metadata/kobodl.dist-info/: METADATA  entry_points.txt
