[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py39']
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.env|\.venv|env|venv|_build|buck-out|build|dist'

[tool.isort]
line_length = 100
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Brandon Davis", email = "kobodl@subdavis.com"},
]
license = {text = "Unlicense"}
requires-python = "<3.13,>=3.9"
dependencies = [
    "beautifulsoup4<5.0.0",
    "click<9",
    "dataclasses<1.0.0",
    "dataclasses-json<0.6.0",
    "flask==3.1.0",
    "pycryptodome<4",
    "requests<3.0,>=2.25",
    "tabulate<0.9.0",
    "setuptools<76.0.0,>=75.8.0",
]
name = "kobodl"
version = "0.12.0"
description = "Kobo Book Downloader"
readme = "README.md"
keywords = [
    "Kobo",
    "eBook",
    "Audiobook",
    "Downloader",
    "DRM",
]

[project.urls]
repository = "https://github.com/subdavis/kobo-book-downloader.git"

[project.scripts]
kobodl = "kobodl:cli"

[dependency-groups]
dev = [
    "tox<4.0.0,>=3.24.4",
]
